--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "repository": "redibox/cache",
   "license": "MIT",
   "engines": {
-    "node": ">=4.3"
+    "node": ">=6.0"
   },
   "redibox": {
     "hook": true,
@@ -65,6 +65,7 @@
     "isparta": "^4.0.0",
     "istanbul": "^1.0.0-alpha.2",
     "mocha": "^2.4.5",
+    "redibox": "git+https://github.com/redibox/core.git",
     "sinon": "^1.17.4"
   },
   "dependencies": {
